# Rust-ASVS-Axum

./: .gitignore  README.md
rusty_api_fix/security_reqs_implemented/: .env  Cargo.toml
rusty_api_fix/security_reqs_implemented/src/handlers/: delete.rs  export.rs  list.rs  mod.rs  upload.rs
rusty_api_fix/security_reqs_implemented/src/utils/: file.rs
rusty_api_fix/security_reqs_implemented/uploads/0Trust/: Weddingplanning.txt  Weddingplanning1.txt  colleagues-names.txt  costs.txt
rusty_api_fix/security_reqs_implemented/uploads/0Trust/for_home/: GroceryList.txt  Renovateplans.txt
rusty_api_fix/security_reqs_implemented/uploads/Mark/: plan-for-summer.txt
rusty_api_vulnerable/: Cargo.toml
rusty_api_vulnerable/config/: config.yaml
rusty_api_vulnerable/src/: main.rs
rusty_api_vulnerable/src/handlers/: create.rs  export.rs  list_root.rs  read.rs
rusty_api_vulnerable/src/utils/: file.rs
rusty_api_vulnerable/uploads/0Trust/: TODO.txt
rusty_api_vulnerable/uploads/Greg/: shopping-list.txt
