[package]
name = "rusty_api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# För JSON-hantering
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# För logging/tracing (valfritt men bra för debug och video-demo)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

# Middlewares som CORS och logging (valfritt men kraftfullt)
tower-http = { version = "0.5", features = ["cors", "trace"] }

#For validating alias
regex = "1"

#Errorhandling:
anyhow = "1"
thiserror = "1"